--- a/CalculateNHLBands.Rmd
+++ b/CalculateNHLBands.Rmd
@@ -15,22 +15,84 @@ Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by press
 
 When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
 
-We are trying to read a csv file. 
-
+list files in SFiveOutput and save them to a file
 ```{r}
-table <- read.csv(file = "Evander Kane_events_20160923_074020_RN817490432.csv", sep = ",", skip = 4, header = TRUE)
+FileNames<-dir("SFiveOutput")
+
 ```
 
 
-Currently we will just add the acceleration as magnitude, regardless of the direction. 
-
 ```{r}
+Dates <- regmatches(FileNames,regexpr("[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]", FileNames)) 
+#The first line is easy: I am asking for 8 digist match
+Names <- regmatches(FileNames,regexpr("[^0-9][^_]+", FileNames))
+#The second one I am asking for a match that is not numberic, and has no (_) sign
+## remove empty space
+Names <- sub(" ", "_", Names)
+NamesDates<-cbind(Names, Dates)
+```
+
+We are trying to read a csv file. 
+```{r}
+filenames <- list.files("SFiveOutput", pattern="*.csv", full.names=TRUE)
+```
+```{r}
+f <- function(x) {
+#table <- read.csv(file = "SFiveOutput/Evander Kane_events_20160923_074020_RN817490432.csv", sep = ",", skip = 4, header = TRUE)
+table <- read.csv(file = x, sep = ",", skip = 4, header = TRUE)
+
+##Currently we will just add the acceleration as magnitude, regardless of the direction.
+
 Acceleration <- mean(table$Hockey.Stride.Accel)
 Acceleration_sd <- sd(table$Hockey.Stride.Accel)
-Acceleration_15sd <- Acceleration_sd*1.5
-Acceleration_2sd <- Acceleration_sd*2
+Acceleration_Onehalfsd <- Acceleration_sd*1.5
+Acceleration_Twosd <- Acceleration_sd*2
 Result <- c(Acceleration, Acceleration_sd, Acceleration_15sd, Acceleration_2sd)
-print(Result)
+#print(file)
+return(Result)
+}
+```
+
+Now apply the function
+```{r}
+Abands<-lapply(filenames, f )
+
+## convert to data frame
+Abands<-as.data.frame(matrix(unlist(Abands), ncol = 4, byrow = T))
+
+colnames(Abands) <- c("Mean", "sd", "OneHalfsd", "Twosd")
+BandsTable <- cbind(NamesDates, Abands)
+```
+
+Next, we read the weights
+
+```{r}
+Weights <- read.csv(file = "weights.csv", sep = ",", header = TRUE, stringsAsFactors = TRUE)
+names(Weights)[names(Weights) == 'ï..Name'] <- 'Names'
+Weights$Names <- sub(" ", "_", Weights$Names)
+Weights$Names <- as.factor(Weights$Names)
+
 ```
 
 
+Query the names to get the name and the date to add to column
+```{r}
+IntermediateTable <- c()
+IntermediateTable <- BandsTable %>% inner_join(Weights, by = 'Names')
+```
+
+```{r}
+IntermediateTable$MeanFinal <- IntermediateTable$Mean * IntermediateTable$Weight*0.453
+
+IntermediateTable$sdFinal <- IntermediateTable$sd * IntermediateTable$Weight*0.453
+
+IntermediateTable$OneHalfsdFinal <- IntermediateTable$OneHalfsd * IntermediateTable$Weight*0.453
+
+IntermediateTable$TwosdFinal <- IntermediateTable$Twosd * IntermediateTable$Weight*0.453
+
+IntermediateTable$MeanPlusSD <- IntermediateTable$MeanFinal+IntermediateTable$sdFinal
+FinalTable <-c()
+FinalTable <- IntermediateTable[, c(1,2 , 7, 8, 9, 10, 11, 12, 13)]
+write.table(FinalTable, file = "Result.csv")
+FinalTable
+```
