--- a/CalculateNHLBands.Rmd
+++ b/CalculateNHLBands.Rmd
@@ -7,9 +7,6 @@ This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute
 
 Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*. 
 
-```{r}
-plot(cars)
-```
 
 Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
 
@@ -17,6 +14,7 @@ When you save the notebook, an HTML file containing the code and output will be 
 
 list files in SFiveOutput and save them to a file
 ```{r}
+library(tidyverse)
 FileNames<-dir("SFiveOutput")
 
 ```
@@ -47,7 +45,7 @@ Acceleration <- mean(table$Hockey.Stride.Accel)
 Acceleration_sd <- sd(table$Hockey.Stride.Accel)
 Acceleration_Onehalfsd <- Acceleration_sd*1.5
 Acceleration_Twosd <- Acceleration_sd*2
-Result <- c(Acceleration, Acceleration_sd, Acceleration_15sd, Acceleration_2sd)
+Result <- c(Acceleration, Acceleration_sd, Acceleration_Onehalfsd, Acceleration_Twosd)
 #print(file)
 return(Result)
 }
