--- a/CalculateNHLBands.Rmd
+++ b/CalculateNHLBands.Rmd
@@ -1,16 +1,22 @@
 ---
-title: "R Notebook"
+title: "Calculating Acceleration bands in NHL"
 output: html_notebook
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
+This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. 
 
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*. 
+The data entered should have the following format (4 lines to be skipped, then 5 column table - no empty spaces!)
 
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
+# Export : 8/8/2017 11:17:53 AM				
+# Reference time : 10/17/2016 2:10:05 PM UTC				
+# CentisecTime : 147671340500				
+# DeviceId : 121				
+Period	Ticks	Timestamp	Hockey Stride Direction	Hockey Stride Accel
+Goalie Work	508	00:00:05.080	4	1.17640042304993
+Goalie Work	549	00:00:05.490	10	1.78826177120209
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
+
 
 list files in SFiveOutput and save them to a file
 ```{r}
