--- a/2_NB/NB_SpamFilter.Rmd
+++ b/2_NB/NB_SpamFilter.Rmd
@@ -13,14 +13,49 @@ author: "Mohammed Zakaria"
 #    theme: readable
 #    toc: yes
 output: github_document
+
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
 
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*. 
+
+Required packages
+```{r}
+#install.packages("class") # for kNN classification
+library(class)
+#install.packages("gmodels") # for CrossTable function at the evaluation
+library(gmodels)
+#install.packages("caret") # for model tuning
+library(caret)
+#install.packages("e1071") # to help with model tuning
+library(e1071)
+#install.packages("pROC") # to make ROC plots
+library(pROC)	
+```
+
+
+Pulling the data: The cancer data is from Brett Lantz's "Machine Learning with R"
+a repo for the data is under this link:
+https://github.com/mzakariaCERN/Machine-Learning-with-R-datasets/blob/master/wisc_bc_data.csv
+and original data can be found under
+https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/
+```{r}
+sms_raw <- read.csv(file="C:/Users/mkzak/Documents/GitHub/FunWithR/FunWithR/2_NB/Data/sms_spam.csv", stringsAsFactors = FALSE)
+
+
+dim(sms_raw)
+str(sms_raw)
+summary(sms_raw)
+
+```
+
+We see there are two features. And the feature type has a categorical variables. So we need to convert it to factor
+
 
 ```{r}
-plot(cars)
+sms_raw$type <- as.factor(sms_raw$type)
+
+str(sms_raw$type)
+table(sms_raw$type)
 ```
 
 Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
