--- a/2_NB/NB_SpamFilter.Rmd
+++ b/2_NB/NB_SpamFilter.Rmd
@@ -21,7 +21,7 @@ output: github_document
 Required packages
 ```{r}
 #install.packages("class") # for kNN classification
-library(class)
+#library(class)
 #install.packages("gmodels") # for CrossTable function at the evaluation
 library(gmodels)
 #install.packages("caret") # for model tuning
@@ -30,6 +30,8 @@ library(caret)
 library(e1071)
 #install.packages("pROC") # to make ROC plots
 library(pROC)	
+#install.packages("tm") # to handle text data
+library(tm)
 ```
 
 
@@ -57,6 +59,27 @@ sms_raw$type <- as.factor(sms_raw$type)
 str(sms_raw$type)
 table(sms_raw$type)
 ```
+
+After installing (loading) tm library, we need to create a container for all the text we are dealing with. This is called a corpus. WE will use 
+VCorpus (for volatile corpus: corpus stored in memove, compare it to PCorpus, which is stored on disk).
+
+
+```{r}
+sms_corpus <- VCorpus(VectorSource(sms_raw$text))
+typeof(sms_corpus)
+```
+
+
+corpus can read from pdf of MS word using readerControl parameter. Check it out! Notice also that corpus is a list objects. So we can manipulate it as such. 
+
+```{r}
+print(sms_corpus)
+inspect(sms_corpus[1:3])
+```
+
+
+
+
 
 Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
 
