--- a/2_NB/NB_SpamFilter.Rmd
+++ b/2_NB/NB_SpamFilter.Rmd
@@ -78,7 +78,42 @@ inspect(sms_corpus[1:3])
 ```
 
 
+To see one message, we need to grab that element in from the list, and conver it to characters
+```{r}
+as.character(sms_corpus[[1]])
 
+```
+
+This can be generalized using lapply
+
+```{r}
+lapply(sms_corpus[1:2], as.character)
+```
+
+
+Next, we need to clean the text from special characters, capital letters etc, and convert it into separate words. 
+
+First, convert to lower case
+
+```{r}
+sms_corpus_clean <- tm_map(sms_corpus, content_transformer(tolower))
+```
+
+remember the first message starts with an upper case letter. Let us take a look now
+
+```{r}
+as.character(sms_corpus_clean[[1]])
+```
+
+next thing, is to remove numbers from SMS. Though some might be useful for the sender/receiver. It doesn't play much value in spam/ham classification.
+
+```{r}
+sms_corpus_clean <- tm_map(sms_corpus_clean, removeNumbers) # no need for content_tranformer b/c removeNumbers is built in tm. to see other
+# built in functions type getTransformations()
+```
+
+
+Next we remove filler (stop) words suc as: 'and', 'or', and 'but'
 
 
 Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
