playing with js

--- a/2_NB/NB_SpamFilter.Rmd
+++ b/2_NB/NB_SpamFilter.Rmd
@@ -37,7 +37,9 @@ library(tm)
 library(SnowballC)
 #install.packages("wordcloud2") # to create word cloud
 library(wordcloud2)
-
+#install.packages("widgetframe")
+#library(widgetframe)
+#devtools::install_github('ramnathv/htmlwidgets')
 ```
 
 
