--- a/2_NB/NB_SpamFilter.Rmd
+++ b/2_NB/NB_SpamFilter.Rmd
@@ -350,7 +350,7 @@ probs_2 <- predict(sms_classifier2, sms_test, type="raw")
 # plot ROC curve
 pred <- prediction(probs_2[, "spam"], sms_test_labels)
 perf_nb_2 <- performance(pred, measure='tpr', x.measure='fpr')
-plot(perf_nb_2)
+#plot(perf_nb_2)
 performance(pred, 'auc')
 ```
 
@@ -358,14 +358,14 @@ performance(pred, 'auc')
 
 ```{r}
 # plot calibration
-data.frame(predicted=probs_2[, "spam"], actual=sms_test_labels) %>%
-  group_by(predicted=round(predicted*10)/10) %>%
-  summarize(num=n(), actual=mean(actual == "spam")) %>%
-  ggplot(data=., aes(x=predicted, y=actual, size=num)) +
-  geom_point() +
-  geom_abline(a=1, b=0, linetype=2) +
-  scale_x_continuous(labels=scales::percent, lim=c(0,1)) +
-  scale_y_continuous(labels=scales::percent, lim=c(0,1))
+#data.frame(predicted=probs_2[, "spam"], actual=sms_test_labels) %>%
+#  group_by(predicted=round(predicted*10)/10) %>%
+#  summarize(num=n(), actual=mean(actual == "spam")) %>%
+#  ggplot(data=., aes(x=predicted, y=actual, size=num)) +
+#  geom_point() +
+#  geom_abline(a=1, b=0, linetype=2) +
+#  scale_x_continuous(labels=scales::percent, lim=c(0,1)) +
+#  scale_y_continuous(labels=scales::percent, lim=c(0,1))
 
 ```
 
@@ -398,7 +398,7 @@ modelLookup("nb")
 
 So we have 3 parameters to tune
 
-```{r Tuning 3 parameters with caret default, warning=FALSE}
+```{r Tuning 3 parameters with caret default, message=FALSE, warning=FALSE, paged.print=FALSE}
 sms_classifier3<- train(sms_train, sms_train_labels, method = "nb", verbose = FALSE)
 sms_classifier3
 sms_test_pred3 <- predict(sms_classifier3, sms_test)
@@ -432,7 +432,7 @@ model fit failed for Resample05: usekernel=FALSE, fL=0, adjust=1 Error in `[<-`(
   
 which is bother some. we are not getting an output ofr most of the tuning choices, except the kernel
 
-```{r distributions of the tuning parameters across tuning parameters.}
+```{r distributions of the tuning parameters across tuning parameters., message=TRUE, warning=TRUE, paged.print=TRUE}
 trellis.par.set(caretTheme())
 densityplot(sms_classifier3, pch = "|")
 ```
@@ -447,7 +447,7 @@ if you check str(sms_classifier3) default method is boot, let us try cv
 
 
 
-```{r Tuning_CV}
+```{r Tuning_CV, message=FALSE, warning=FALSE, paged.print=FALSE}
 sms_classifier4<- train(sms_train, sms_train_labels, method = "nb", trControl=trainControl(method='cv',number=10));
 sms_classifier4
 sms_test_pred4 <- predict(sms_classifier4, sms_test)
@@ -456,28 +456,27 @@ CrossTable(sms_test_pred4, sms_test_labels, prop.chisq = FALSE, prop.t = FALSE, 
 
 Trying to use ROC, not sure why we get an error
 
-#```{r Tuning_ROC}
-#ctrl <- trainControl(method = "cv",   # 10fold cross validation
-#                     
-#                     summaryFunction=twoClassSummary,   # Use AUC to pick the best model
-#                     classProbs=TRUE,
-#                     allowParallel = FALSE)
-#m_cv_ROC <- train(sms_train, sms_train_labels,
-#      method = "nb",
-#      metric = "ROC",
-#      trControl = ctrl)
 
-#m_cv_ROC
-#sms_test_pred5 <- predict(m_cv_ROC, sms_test)
-#CrossTable(sms_test_pred5, sms_test_labels, prop.chisq = FALSE, prop.t = FALSE, prop.r = FALSE, dnn = c('predicted','actual'))
-#```
+ctrl <- trainControl(method = "cv",   
+                     summaryFunction=twoClassSummary,
+                     classProbs=TRUE,
+                     allowParallel = FALSE)
+m_cv_ROC <- train(sms_train, sms_train_labels,
+      method = "nb",
+      metric = "ROC",
+      trControl = ctrl)
+
+m_cv_ROC
+sms_test_pred5 <- predict(m_cv_ROC, sms_test)
+CrossTable(sms_test_pred5, sms_test_labels, prop.chisq = FALSE, prop.t = FALSE, prop.r = FALSE, dnn = c('predicted','actual'))
+
 
 sometimes we get this error: task 1 failed - "non-numeric argument to mathematical function". changed to cv, and removed parallel. it seems to work! 
 
-#```{r}
-#trellis.par.set(caretTheme())
-#densityplot(m_cv_ROC, pch = "|")
-#```
+
+trellis.par.set(caretTheme())
+densityplot(m_cv_ROC, pch = "|")
+
 
 
 
