--- a/2_NB/NB_SpamFilter.Rmd
+++ b/2_NB/NB_SpamFilter.Rmd
@@ -481,6 +481,6 @@ densityplot(m_cv_ROC, pch = "|")
 
 
 
-References
-1. https://rpubs.com/jhofman/nb_vs_lr
-2. https://topepo.github.io/caret/model-training-and-tuning.html
+>References
+>1. https://rpubs.com/jhofman/nb_vs_lr  
+>2. https://topepo.github.io/caret/model-training-and-tuning.html
